Implemented new Java language-level code style