@@ -131,7 +131,7 @@ public class ChallengeServiceImpl implements ChallengeService, ArchiveMark<Chall
         Function<Task, TaskPreview> function = (task) -> dtoConverter.convertToDto(task, TaskPreview.class);
         List<TaskPreview> tasks = taskRepository.findCurrentTasksByChallenge(challenge)
                 // .findTaskByChallengeOrderByStartDate(challenge)
-                .stream().map(function).collect(Collectors.toList());
+                .stream().map(function).toList();
         challengeProfile.setTasks(tasks);
         return challengeProfile;
     }
@@ -172,7 +172,7 @@ public class ChallengeServiceImpl implements ChallengeService, ArchiveMark<Chall
 
     private void validateSortNumber(Long sortNumber) {
         List<Long> unavailableSortNumbers = challengeRepository.findAll().stream().map(Challenge::getSortNumber)
-                .collect(Collectors.toList());
+                .toList();
         ChallengeUtil.validateSortNumber(sortNumber, unavailableSortNumbers);
     }
 
@@ -180,7 +180,7 @@ public class ChallengeServiceImpl implements ChallengeService, ArchiveMark<Chall
     public List<SuccessUpdatedTask> cloneChallenge(Long id, UpdateChallengeDate startDate) {
         Challenge challenge = getChallengeById(id);
         List<Task> tasks = new ArrayList<>(challenge.getTasks()).stream()
-                .sorted(Comparator.comparing(Task::getStartDate)).collect(Collectors.toList());
+                .sorted(Comparator.comparing(Task::getStartDate)).toList();
         List<SuccessUpdatedTask> updatedTasks = new ArrayList<>();
         long daysBetween = DAYS.between(tasks.get(0).getStartDate(), startDate.getStartDate());
         for (Task task : tasks) {
